# unige-robotics-msc

./: .gitmodules  LICENSE
arp/: .gitignore
arp/assignment1/: Makefile  appsettings.json  display  drone  map  obstacles  server  targets
arp/assignment1/include/: config_struct.h  dynamics_struct.h  globals.h  utils.h
arp/assignment1/logs/: display.txt  drone.txt  map.txt  obstacles.txt  server.txt  targets.txt
arp/assignment1/old/: display-shady.c  display.c  drone_old.c
arp/assignment1/src/: .gitignore  utils.c
arp/homeworks/0x01-homework1/: first.c  second  second.c  the_three.sh  third  third.c
arp/homeworks/0x02-homework2/: first  first.c  firstsecond.sh  number1.c  second  second.c  wild.sh  wild1  wild1.c  wild2  wild2.c
arp/homeworks/0x03-homework3/: solution  solution.c
arp/homeworks/0x04-homework4/: README.md  solution  solution.c
arp/homeworks/0x05-homework5/: README.md  solution-forks.c  solution-threads.c  solution1
arp/homeworks/0x06-homework6/: README.md  output2.txt  solution1  solution1.c  solution2  solution2.c
arp/homeworks/0x07-homework7/: konsole-run.sh  p1  p1.c  p2  p2.c  parent  parent.c
arp/homeworks/test/: display  display.c
mcm/: report.fdb_latexmk  report.fls  report.tex
mcm/lab1/src/: main.m
mcm/lab2/src/: main.m  main_live.mlx
mcm/lab3/MCM_lab3_2024_25_final/: main.tex
mcm/lab3/src/: main.m
mcm/src/include/: AngleAxisToRot_solution.asv  AngleAxisToRot_solution.m  RotToAngleAxis_solution.m  RotToYPR_solution.m  YPRToRot_solution.m
ml/: run.sh
ml/0x00-naieve-bayes/: solution.ipynb  solution.py
ml/0x03-knn/: predictions_minst_1.csv  solution.ipynb  solution_minst.py  solution_minst_dataset.ipynb  solution_wine_dataset.ipynb
ml/0x04-neural-network/: .gitignore  autoencoder.py  main.py  solution.ipynb
ml/ML_Report_Project/: README.md  main.tex
rt1/: .gitignore
rt1/my_ros/: .gitignore
rt1/my_ros/src/assignment2_p1/: CMakeLists.txt  package.xml
rt1/my_ros/src/assignment2_p1/launch/: assignment2_p1.launch
rt1/my_ros/src/assignment2_p1/scripts/: action_client_node.py  last_target_service.py
rt1/my_ros/src/assignment2_p1/srv/: GetLastTarget.srv
rt1/ros2_ws/: .gitignore
rt1/ros2_ws/install/: local_setup.sh  setup.sh
rt1/ros2_ws/log/: latest_build  latest_list
rt1/ros_ex1/: .gitignore  README.md
rtos/Driver_Exercises/: .Module.symvers.cmd  .simple.mod.cmd  .simple.o.cmd  simple.ko
rtos/Driver_Exercises/Solution/: .modules.order.cmd  .simple.mod.o.cmd  modules.order  read  simple.c  simple.mod.c  write
rtos/Driver_Exercises/SolutionMinor/: .simple.ko.cmd  .simple.o.cmd  modules.order  (+3 more)
rtos/assignment/: kernal.logs  solution  solution.cpp
rtos/drivers/: .modules.order.cmd  .simple.ko.cmd  .simple.mod.o.cmd  read.c  simple.c  simple.mod  simple.mod.c  write.c
rtos/threads/: thread1  thread2  thread3  threadex1-start.cpp  threadex1.cpp  threadex2-start.cpp  threadex2.cpp  threadex3-start.cpp  threadex3.cpp
(+177 files in other folders)
