<?xml version="1.0"?>
<package format="2">
  <name>assignment2_p1</name>
  <version>0.0.0</version>
  <description>The assignment2_p1 package</description>

  <!-- Maintainer Information -->
  <maintainer email="shadyrafat60@gmail.com">shady</maintainer>

  <!-- License Information -->
  <license>MIT</license>

  <!-- URLs -->
  <url type="website">http://wiki.ros.org/assignment2_p1</url>
  <url type="repository">https://github.com/your_repository/assignment2_p1</url>
  <url type="bugtracker">https://github.com/your_repository/assignment2_p1/issues</url>

  <!-- Build Tool Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Build Export Dependencies -->
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- Execution Dependencies -->
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>assignment_2_2024</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>rostest</test_depend>

  <!-- Documentation Dependencies -->
  <doc_depend>doxygen</doc_depend>

  <!-- Export Information -->
  <export>
    <architecture_independent />
  </export>
</package>